<resources>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="color_hue">Hue</string>
    <string name="color_opacity">Opacity</string>
    <string name="color_hex_value">Hex color value</string>
    <string name="color_saturation_brightness">Color saturation and brightness</string>
    <string name="color_preview_value">Color preview %1$s</string>
    <string name="invalid_color_value">Enter #RRGGBB or #AARRGGBB</string>
    <string name="edit_color_for">Edit color for %1$s</string>
    <string name="cast">Cast</string>
    <string name="search">Search</string>
    <string name="add_to_query">Add to query</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="channel_image">Channel image</string>
    <string name="add_to">Add to</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_history">Add to history</string>
    <string name="general">General</string>
    <string name="channel">Channel</string>
    <string name="home">Home</string>
    <string name="sync_history">Sync Remote History</string>
    <string name="sync_history_desc">Synchronize account history from this platform on startup</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="advanced_settings_description">If advanced settings should be shown, this exposes additional settings to finetune your experience.</string>
    <string name="progress_bar_description">If a historical progress bar should be shown</string>
    <string name="hide_hidden_from_search">Hide hidden from home in search</string>
    <string name="hide_hidden_from_search_description">Hide videos and creators hidden from home also in search results</string>
    <string name="recommendations">Recommendations</string>
    <string name="more">More</string>
    <string name="playlists">Playlists</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="loading">Loading</string>
    <string name="retry">Retry</string>
    <string name="install_failed_device_installer_broken">Failed to start system installer. Your device’s ROM is not compatible with automatic updates.</string>
    <string name="cancel">Cancel</string>
    <string name="enable_daily_backup">Manage daily backup</string>
    <string name="automatic_backup_unencrypted_explanation">Enable or disable your automatic backups here</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="automatic_backup_disabled">Automatic backup disabled</string>
    <string name="automatic_backup_enabled">Automatic backup enabled</string>
    <string name="failed_to_retrieve_data_are_you_connected">Failed to retrieve data, are you connected?</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="shorts">Shorts</string>
    <string name="sources">Sources</string>
    <string name="buy">Buy</string>
    <string name="faq">FAQ</string>
    <string name="privacy_mode">Privacy Mode</string>
    <string name="the_top_source_will_be_considered_primary">The top source will be considered primary</string>
    <string name="defaults">Defaults</string>
    <string name="home_screen">Home Screen</string>
    <string name="preferred_quality">Preferred Quality</string>
    <string name="preferred_quality_description">Default quality for watching a video</string>
    <string name="update">Update</string>
    <string name="refresh">Refresh Feed</string>
    <string name="close">Close</string>
    <string name="never">Never</string>
    <string name="import_options">Select any of the following available import options.</string>
    <string name="there_is_an_update_available_do_you_wish_to_update">There is an update available, do you wish to update?</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="installing_update">Installing update…</string>
    <string name="done">Done</string>
    <string name="getHome" translatable="false">getHome</string>
    <string name="success">Success</string>
    <string name="failed_to_update_with_error">Failed to update package with error</string>
    <string name="general_failure">The operation failed in a generic way</string>
    <string name="aborted">The operation failed because it was actively aborted</string>
    <string name="blocked">The operation failed because it was blocked</string>
    <string name="conflict">The operation failed because it conflicts (or is inconsistent with) with another package already installed on the device</string>
    <string name="incompatible">The operation failed because it is fundamentally incompatible with this device</string>
    <string name="invalid">The operation failed because one or more of the APKs was invalid</string>
    <string name="not_enough_storage">The operation failed because of storage issues</string>
    <string name="live_capitalized">LIVE</string>
    <string name="live">Live</string>
    <string name="click_to_read_more">Click to read more</string>
    <string name="click_to_hide">Click to hide</string>
    <string name="version">Version</string>
    <string name="sort_by">Sort by</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="background">Background</string>
    <string name="background_revert">Video</string>
    <string name="add">Add</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="view_all">View all</string>
    <string name="creators">Creators</string>
    <string name="library">Library</string>
    <string name="enabled">Enabled</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_on_while_casting">Keep screen on while casting</string>
    <string name="always_proxy_requests">Always proxy requests</string>
    <string name="always_proxy_requests_description">Always proxy requests when casting data through the device.</string>
    <string name="allow_ipv6">Allow IPV6</string>
    <string name="allow_ipv6_description">If casting over IPV6 is allowed, can cause issues on some networks</string>
    <string name="allow_ipv4">Allow Link Local IPV4</string>
    <string name="allow_ipv4_description">If casting over IPV4 link local is allowed, can cause issues on some networks</string>
    <string name="experimental_cast">Experimental</string>
    <string name="experimental_cast_description">Use experimental casting backend (requires restart)</string>
    <string name="discover">Discover</string>
    <string name="find_new_video_sources_to_add">Find new video sources to add</string>
    <string name="these_sources_have_been_disabled">These sources have been disabled</string>
    <string name="these_creators_in_group">These are the creators that are visible for this group.</string>
    <string name="these_creators_not_in_group">These creators are not in this group.</string>
    <string name="disabled">Disabled</string>
    <string name="watch_later">Watch Later</string>
    <string name="no_results">Nothing to see here</string>
    <string name="no_results_shorts">The enabled sources do not have any short video results.</string>
    <string name="create">Create</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="do_not_ask_again">Don\'t ask again</string>
    <string name="confirm_delete_playlist">Are you sure you want to delete this playlist?</string>
    <string name="confirm_delete_subscription">Are you sure you want to delete this subscription?</string>
    <string name="confirm_remove_source">Removing this source will result in some of your subscriptions not being resolved.</string>
    <string name="shuffle">Shuffle</string>
    <string name="play_all">Play all</string>
    <string name="search_history">Search history</string>
    <string name="app_error">App Error</string>
    <string name="developer">Developer</string>
    <string name="remove_historical_suggestion">Remove historical suggestion</string>
    <string name="comments">Comments</string>
    <string name="comments_description">The comment section underneath content</string>
    <string name="merchandise">Merchandise</string>
    <string name="reached_the_end_of_the_playlist">Reached the end of the playlist</string>
    <string name="the_playlist_will_restart_after_the_video_is_finished">The playlist will restart after the video is finished</string>
    <string name="restart_now">Restart Now</string>
    <string name="end_of_queue_reached">End of queue reached</string>
    <string name="end_of_playlist_reached">End of playlist reached</string>
    <string name="end_of_watch_later_reached">End of watch later reached</string>
    <string name="reached_the_end_of_the_queue">Reached the end of the queue</string>
    <string name="the_queue_will_restart_after_the_video_is_finished">The queue will restart after the video is finished</string>
    <string name="up_next">Up next</string>
    <string name="queue">Queue</string>
    <string name="clear">Clear</string>
    <string name="last_hour">Last hour</string>
    <string name="last_24_hours">Last 24 hours</string>
    <string name="last_week">Last week</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="last_year">Last year</string>
    <string name="all_time">All time</string>
    <string name="are_you_sure_delete_historical">Are you sure you want to remove these historical entries?</string>
    <string name="removed">removed</string>
    <string name="add_source">Add Source</string>
    <string name="platform_url">Platform URL</string>
    <string name="repository_url">Repository URL</string>
    <string name="script_url">Script URL</string>
    <string name="config_url">Config URL</string>
    <string name="source_permissions_explanation">These are the permissions the plugin requires to function</string>
    <string name="source_explain_eval_access">The plugin will have access to eval capacity</string>
    <string name="source_explain_script_url">The plugin will have access to the following domains</string>
    <string name="scan_qr">Scan QR</string>
    <string name="scan_qr_explain">Scan a QR code to install</string>
    <string name="enter_url_explain">Enter a URL to load the plugin config from.</string>
    <string name="enter_url">Enter URL</string>
    <string name="install">Install</string>
    <string name="no_devices_found_it_may_take_a_while_for_your_device_to_show_up_please_be_patient">No devices found. It may take a while for your device to show up, please be patient</string>
    <string name="not_ready">Not ready</string>
    <string name="connect">Connect</string>
    <string name="stop">Stop</string>
    <string name="stop_casting">Stop casting</string>
    <string name="start">Start</string>
    <string name="comment">Comment</string>
    <string name="comment_destination">Comment destination</string>
    <string name="type_your_comment_here">Type your comment here…</string>
    <string name="more_options">More Options</string>
    <string name="cd_button_replies">Replies</string>
    <string name="cd_image_like_icon">Like</string>
    <string name="cd_image_dislike_icon">Dislike</string>
</resources>