<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_comment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="14dp"
    android:layout_marginEnd="14dp"
    android:orientation="vertical">

    <com.futo.platformplayer.views.LoaderView
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/comment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.futo.platformplayer.views.others.CreatorThumbnail
            android:id="@+id/image_thumbnail"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/channel_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/placeholder_channel_thumbnail" />

        <TextView
            android:id="@+id/text_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/image_thumbnail"
            app:layout_constraintTop_toTopOf="@id/image_thumbnail"
            tools:text="ShortCircuit" />

        <TextView
            android:id="@+id/text_metadata"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/gray_ac"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/text_author"
            app:layout_constraintLeft_toRightOf="@id/text_author"
            app:layout_constraintRight_toLeftOf="@id/button_comment_options"
            app:layout_constraintTop_toTopOf="@id/text_author"
            tools:text=" • 3 years ago" />

        <ImageButton
            android:id="@+id/button_comment_options"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/more_options"
            android:padding="12dp"
            android:rotation="90"
            android:scaleType="centerInside"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more" />

        <com.futo.platformplayer.views.behavior.NonScrollingTextView
            android:id="@+id/text_body"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:background="@color/transparent"
            android:fontFamily="@font/inter_regular"
            android:isScrollContainer="false"
            android:textColor="#CCCCCC"
            android:textSize="13sp"
            android:maxLines="150"
            app:layout_constraintTop_toBottomOf="@id/text_metadata"
            app:layout_constraintLeft_toRightOf="@id/image_thumbnail"
            app:layout_constraintRight_toLeftOf="@id/button_comment_options"
            tools:text="@string/lorem_ipsum" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/text_body"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_body"
            android:layout_marginLeft="-10dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <com.futo.platformplayer.views.pills.PillRatingLikesDislikes
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="9dp" />

            <LinearLayout
                android:id="@+id/layout_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                app:layout_constraintLeft_toRightOf="@id/image_thumbnail"
                app:layout_constraintTop_toBottomOf="@id/text_body"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/image_like_icon"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/cd_image_like_icon"
                    app:srcCompat="@drawable/ic_thumb_up" />

                <TextView
                    android:id="@+id/text_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    tools:text="500K"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <ImageView
                    android:id="@+id/image_dislike_icon"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/cd_image_dislike_icon"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/ic_thumb_down" />

                <TextView
                    android:id="@+id/text_dislikes"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    tools:text="500K"
                    android:textColor="@color/white"
                    android:textSize="13dp" />
            </LinearLayout>

            <com.futo.platformplayer.views.pills.PillButton
                android:id="@+id/button_replies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_button_replies"
                app:pillIcon="@drawable/ic_forum"
                app:pillText="55 Replies"
                android:layout_marginStart="8dp" />

            <Space android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
